<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.ChangePasswordActivity">
    <!--返回键-->
    <Button

        android:id="@+id/changepwd_bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:background="@null"
        android:drawableLeft="@mipmap/back"
        android:drawablePadding="-23dp"
        android:text="@string/changepwd_bt_back"
        android:textSize="18sp" />

    <!--标题 找回密码-->
    <TextView

        android:id="@+id/changepwd_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changepwd_bt_back"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:text="@string/changepwd_tv_title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp" />


    <!-- 输入框-->
    <LinearLayout
        android:layout_below="@+id/changepwd_tv_title"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/changepwd_tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/changepwd_tv_phone"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/changepwd_et_pwd"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/changepwd_tv_phone"
                android:background="@null"
                android:hint="@string/changepwd_et_phone_hint"
                android:inputType="textPassword"
                android:maxLength="11"
                android:textSize="18sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ededed"
                android:layout_below="@+id/changepwd_tv_phone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/changepwd_tv_newpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/changepwd_tv_newpwd"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/changepwd_et_newpwd"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@+id/changepwd_tv_newpwd"
                android:background="@null"
                android:hint="@string/changepwd_et_password_hint"
                android:inputType="textPassword"
                android:textSize="18sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ededed"
                android:layout_below="@+id/changepwd_tv_newpwd"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>

        <!--注册按钮-->
        <Button
            android:id="@+id/changepwd_bt_findpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/changedpwd_bt_findpwd"
            android:background="@drawable/loign_activity_login_button"
            android:minHeight="40dp"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>