<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/adapter_lawyer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp">

    <TextView
        android:id="@+id/adapter_lawyername"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/adapter_lawyername"
        android:textSize="15sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/adapter_lawyerpicture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="33dp"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/adapter_lawyeroffice"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="117dp"
        android:layout_marginTop="17dp"
        android:text="@string/adapter_lawyeroffice"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginLeft="130dp"
        android:gravity="center"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/adapter_lawyercase1"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:padding="2dp"
            android:background="@drawable/textview_border"
            android:text="@string/adapter_lawyercase1"
            android:textColor="#25c4fc" />

    </LinearLayout>

    <TextView
        android:id="@+id/adapter_lawyerposition"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="30dp"
        android:text="@string/adapter_lawyerposition" />

    <TextView
        android:id="@+id/adapter_lawyeryear"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="70dp"
        android:text="@string/adapter_lawyeryear"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="50dp"
        android:text="生日" />


</RelativeLayout>