<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.RegisterActivity">
    <!--返回键-->
    <Button

        android:id="@+id/findpwd_bt_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/back"
        android:drawablePadding="-23dp"
        android:text="@string/register_bt_back"
        android:textSize="18sp"
        android:background="@null"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:onClick="back"
        />


    <!--标题 手机号注册-->
    <TextView

        android:id="@+id/findpwd_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/findpwd_bt_back"
        android:text="手机号注册"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        />


    <!-- 输入框-->
    <LinearLayout
        android:layout_below="@+id/findpwd_tv_title"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/findpwd_tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_tv_phone"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginLeft="25dp"/>
            <EditText
                android:id="@+id/register_et_phone"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@null"
                android:layout_toRightOf="@+id/findpwd_tv_phone"
                android:layout_marginLeft="30dp"
                android:hint="@string/register_et_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:textSize="18sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ededed"
                android:layout_below="@+id/findpwd_tv_phone"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/findpwd_tv_verifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_tv_verifi"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginLeft="25dp"/>
            <EditText
                android:id="@+id/register_et_verifi"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@null"
                android:layout_toRightOf="@+id/findpwd_tv_verifi"
                android:layout_marginLeft="30dp"
                android:maxLength="6"
                android:hint="@string/register_et_verifi"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/register_bt_verifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="0dp"
                android:layout_alignParentRight="true"
                android:onClick="verifi"
                android:text="@string/register_bt_verifi"
                android:layout_marginRight="25dp"
                android:textSize="16dp"
                android:layout_alignBottom="@+id/findpwd_tv_verifi"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ededed"
                android:layout_below="@+id/findpwd_tv_verifi"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/findpwd_tv_newpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_tv_password"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginLeft="25dp"/>
            <EditText
                android:id="@+id/register_et_password"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@null"
                android:layout_toRightOf="@+id/findpwd_tv_newpwd"
                android:layout_marginLeft="30dp"
                android:hint="@string/register_et_password"
                android:inputType="textPassword"
                android:textSize="18sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ededed"
                android:layout_below="@+id/findpwd_tv_newpwd"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"/>
        </RelativeLayout>

        <!--注册按钮-->
        <Button
            android:id="@+id/register_bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/register_bt_reg"
            android:background="@drawable/loign_activity_login_button"
            android:minHeight="40dp"
            android:textColor="@color/white"
            android:onClick="register"
            />
    </LinearLayout>
</RelativeLayout>