<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.HomeActivity"
    android:orientation="vertical"
    >

    <FrameLayout
        android:id="@+id/home_top_framelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        >
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#B3CCCCCC"
        android:layout_marginBottom="5dp"
        />
    <RadioGroup
        android:id="@+id/home_rg_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        >
        <RadioButton
            android:id="@+id/home_rb_home"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/home_rb_home"
            android:button="@null"
            android:text="@string/home_rb_home_text"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            android:textColor="@color/home_rb_textcolor"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/home_rb_lawyer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/home_rb_lawyer"
            android:button="@null"
            android:text="@string/home_rb_lawyer_text"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            android:textColor="@color/home_rb_textcolor"
            />
        <RadioButton
            android:id="@+id/home_rb_consult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/home_rb_consult"
            android:button="@null"
            android:textSize="12sp"
            android:text="@string/home_rb_consult_text"
            android:textColor="@color/home_rb_textcolor"
            android:gravity="center_horizontal"
            />
        <RadioButton
            android:id="@+id/home_rb_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/home_rb_mine"
            android:button="@null"
            android:textSize="12sp"
            android:text="@string/home_rb_mine_text"
            android:textColor="@color/home_rb_textcolor"
            android:gravity="center_horizontal"
            />
    </RadioGroup>
</LinearLayout>