<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pxxy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.ClassicCaseActivity">

    <com.pxxy.lawconsult.view.CustomTitleView
        android:id="@+id/classic_case_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        pxxy:title_background="@color/theme_color"
        pxxy:title_center_textView_text="@string/classic_CaseActivity_title_center_tv"
        pxxy:title_center_textView_textSize="18sp"
        pxxy:title_leftButton_resource="@mipmap/terms_servicebreak"
        pxxy:title_leftButton_visibility="visible"
        pxxy:title_leftTv_text="@string/show_case_title_left_tv"
        pxxy:title_leftTv_textSize="16sp"
        />

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/classic_case_refreshlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        pxxy:srlFooterTranslationViewId="@id/classic_case_activity_recyclerview">

        <!--刷新头部-->
        <com.scwang.smartrefresh.header.MaterialHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/classic_case_activity_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/classiccase_activity_not_internet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:visibility="invisible"
                >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/not_internet"
                    android:layout_gravity="center"
                    android:layout_marginTop="200dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/classicCase_activity_not_internet"
                    android:textColor="#CCCCCC"
                    android:layout_gravity="center"
                    />

            </LinearLayout>

        </RelativeLayout>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>
